Changes since RTEMS-NFS 1.2:
 NFS:
 - ftruncate didn't work. The functionality is achieved by nfs_sattr()
   setting the file size to 0. However, nfs_sattr() always tried to set
   all attributes (re-applying the current values to fields we didn't
   want to change) which failed (EPERM) if we were not the owner.
   Now, we restrict modifications to the requested fields (in case of
   ftruncate this is *only* the size), adhering to rfc1094 (which states
   that unused fields shall be set to -1).
 - lseek(SEEK_END) didn't work. The underlying RTEMS filesystem code
   uses an internal file 'size' field to compute the offset whence SEEK_END.
   Instead of painfully maintaining 'size' across all system calls, we
   just tweak the offset for SEEK_END and leave 'size' unused.
 - fix: O_APPEND wasn't honoured. Note that there is no NFS 'append' call - 
   the client simply uses the currently available idea of the file size
   to set the write offset. This obviously is subject to race conditions
   if multiple clients are writing the same file.
 dirutils:
 - replaced read/write calls by stdio; In case of copying to stdout, I
   experienced occasional crashes when write(fileno(stdout),...) -- according
   to the standard, mixing low-level i/o with stdio might produce undefined
   results; there we go...

Changes since RTEMS-NFS 1.1:
 NFS:
 - unlink() didnt work. The underlying RTEMS filesystem code evaluates
   a '..' path on a non-directory node to find out the file's parent
   directory. Workaround to this semantically inelegant RTEMS feature
   was implemented.
  
Changes since RTEMS-NFS 1.0.beta3:
 NFS:
 - fixed possible string overrun in nfsMount
 - nfs_read_dir() must reset the 'eofreached' flag if it skipped
   dirents present in the xdr but not fitting into the user buffer.
 - nfsMountsShow() released the wrong lock!
 RPCIO:
 - cannot delete locked binary semaphore (authlock) -- must unlock
   first (authlock was never deleted and hence effectively leaked)